# rdfproxy

./: Dockerfile  README  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
example/: compose.yml  query.sh
example/data/: example.ttl
example/jena/: config.ttl  data.trig  data.ttl
example/queries/: example.rq
example/rdfproxy/: prefixes.json
example/rdfproxy/templates/: DigitalDocument.jinja  Error.html  Error.jinja  Error.jinja2  Statement.html  Statement.jinja  Statement.jinja2  WebSite.html  WebSite.jinja2  _layout.jinja
example/rdfproxy/templates/1.0.0.127/: DigitalDocument.html  DigitalDocument.jinja  DigitalDocument.jinja2
example/templates/: BlogPosting.html  DigitalDocument.html  Error.html  PersonalProfileDocument.html  WebSite.html  _406.html  _error.html  _layout.html
rdfdp/: app.py  templates.py  utils.py
rdfgp/: app.py  store.py  utils.py
rdfproxy/: app.py  cli.py  config.py  store.py  utils.py
scripts/: default_prefixes.json  dump_default_prefixes.py
