[project]
name = "rdfproxy"
version = "0.1.0"
description = "Simple proxy application to serve resources from a SPARQL endpoint as Web documents with content negotiation"
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "mistune>=3.2.0",
    "rdflib>=7.6.0",
]
