[project]
name = "rdfproxy"
version = "0.1.0"
description = "Simple proxy application to serve resources from a SPARQL endpoint as Web documents with content negotiation"
readme = "README"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "mistune>=3.2.0",
    "rdflib>=7.6.0",
]

[project.optional-dependencies]
gunicorn = [
    "gunicorn>=25.3.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
